k8s/apps/shutdown-manager/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: shutdown-manager
    app.kubernetes.io/name: shutdown-manager
  name: shutdown-manager
  namespace: shutdown-manager
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
  selector:
    app: shutdown-manager
    app.kubernetes.io/name: shutdown-manager
  type: ClusterIP
