k8s/apps/shutdown-manager/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: shutdown-manager
  namespace: shutdown-manager
spec:
  hostnames:
    - shutdown-manager.local.walnuts.dev
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-gateway-system
  rules:
    - backendRefs:
        - kind: Service
          name: shutdown-manager
          port: 8080
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
